--- a/index.html
+++ b/index.html
@@ -340,25 +340,27 @@
 
         .entry {
             position: absolute;
-            border-radius: var(--radius);
-            padding: 0.4rem 0.6rem;
-            font-size: 0.8rem;
-            color: var(--card-foreground);
+            border-radius: 12px;
+            padding: 0.5rem 0.8rem;
+            font-size: 0.92rem;
+            color: #fff;
+            background-color: var(--primary);
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
             cursor: pointer;
-            transition: all 0.2s;
+            transition: all 0.2s, box-shadow 0.2s;
             z-index: 5;
             border: 1px solid var(--border);
             display: flex;
             align-items: center;
             justify-content: space-between;
+            margin-bottom: 6px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
         }
 
-        .entry:hover {
-            transform: translateY(-1px);
-            box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
+        .entry:not(:last-child) {
+            margin-bottom: 8px;
         }
 
         .entry.focus {
@@ -368,6 +370,8 @@
 
         .entry.focus:hover {
             background-color: var(--primary-hover);
+            box-shadow: 0 4px 16px rgba(0,0,0,0.15);
+            z-index: 10;
         }
 
         .entry.distraction {
@@ -377,7 +381,9 @@
 
         .entry.distraction:hover {
             background-color: var(--destructive);
-            opacity: 0.8;
+            opacity: 0.92;
+            box-shadow: 0 4px 16px rgba(244,67,54,0.15);
+            z-index: 10;
         }
 
         .entry.singleColor {
@@ -387,12 +393,14 @@
 
         .entry.singleColor:hover {
             background-color: var(--accent);
+            box-shadow: 0 4px 16px rgba(0,0,0,0.10);
+            z-index: 10;
         }
 
         .app-icon {
-            width: 16px;
-            height: 16px;
-            margin-right: 0.5rem;
+            width: 18px;
+            height: 18px;
+            margin-right: 0.7rem;
         }
 
         /* Week and Month View Styles */
@@ -1132,7 +1140,10 @@
                     </a>
             </li>
         </ul>
+            <div class="mt-auto pt-3 pb-2" style="position:sticky;bottom:0;background:var(--secondary);z-index:100;border-top:1px solid var(--border);">
+                <button id="toggleTracking" class="btn btn-primary w-100">Start Tracking</button>
             </div>
+        </div>
         <div class="flex-grow-1 p-4" style="overflow-y: auto; background-color: var(--background); color: var(--foreground)">
             <div id="timeline-view">
                 <div class="d-flex justify-content-between align-items-center mb-4">
@@ -1152,7 +1163,6 @@
                         <button id="addEntryBtn" class="btn btn-outline-secondary me-2">
                             <i class="fas fa-plus me-2"></i>Add Entry
                         </button>
-                        <button id="toggleTracking" class="btn btn-primary">Start Tracking</button>
                     </div>
                     </div>
                 <div class="card" style="background-color: var(--card); border: 1px solid var(--border);">
