Enhance .env configuration with Stripe and Firebase placeholders, update server port to 3001, and add payment-init.js script in index.html. Refactor PaymentService and PaymentUI classes for improved logging and error handling, including Firebase initialization checks and subscription verification. Update package.json for build scripts and dependencies.

--- a/index.html
+++ b/index.html
@@ -2836,6 +2836,7 @@
     <!-- Payment Scripts -->
     <script type="module" src="js/payment-service.js"></script>
     <script type="module" src="js/payment-ui.js"></script>
+    <script type="module" src="js/payment-init.js"></script>
     
     <script src="renderer.js"></script>
 </body>
